updated after SME input

--- a/create_configuration.ipynb
+++ b/create_configuration.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,8 @@
     "file_ = '.\\example_files\\configuration.xml' # @USER: Provide the path of a configuration.xml file\n",
     "\n",
     "n_scenarios = 10 # @USER: Set the desired number of scenarios\n",
-    "\n",
+    "include_0 = True\n",
+    "include_100 = True\n",
     "\n",
     "# Choose whether to use the default values or not\n",
     "# True; Use default values (if available scenario), \n",
@@ -195,6 +196,14 @@
    ],
    "source": [
     "succes_rates = list(range(100//n_scenarios,100+1,100//n_scenarios))\n",
+    "\n",
+    "if include_0:\n",
+    "    if 0 not in succes_rates: succes_rates = [0] + succes_rates\n",
+    "if include_100:\n",
+    "    if 100 not in succes_rates: succes_rates = succes_rates + [100]\n",
+    "\n",
+    "n_scenarios = len(succes_rates)\n",
+    "\n",
     "succes_rates"
    ]
   },
@@ -303,7 +312,8 @@
     "file_ = '.\\example_files\\configuration2.xml' # @USER: Provide the path of a configuration.xml file\n",
     "\n",
     "n_scenarios = 10 # @USER: Set the desired number of scenarios\n",
-    "\n",
+    "include_0 = True\n",
+    "include_100 = True\n",
     "\n",
     "# A configuration.xml file will be created per age group. The user can define age groups. Example:\n",
     "# age_groups = [ \n",
@@ -353,6 +363,13 @@
    ],
    "source": [
     "succes_rates = list(range(100//n_scenarios,100+1,100//n_scenarios))\n",
+    "\n",
+    "if include_0:\n",
+    "    if 0 not in succes_rates: succes_rates = [0] + succes_rates\n",
+    "if include_100:\n",
+    "    if 100 not in succes_rates: succes_rates = succes_rates + [100]\n",
+    "\n",
+    "n_scenarios = len(succes_rates)\n",
     "\n",
     "print(f\"succes_rates: {succes_rates}\")"
    ]
@@ -468,6 +485,8 @@
     "file_ = '.\\example_files\\configuration2.xml' # @USER: Provide the path of a configuration.xml file\n",
     "\n",
     "n_scenarios = 5 # @USER: Set the desired number of scenarios\n",
+    "include_0 = True\n",
+    "include_100 = True\n",
     "\n",
     "# The user could provide names for the scenario's. This should be a list with strings with the same lenght as the number of scenarios.\n",
     "# If you want to use the scenario names \"Scenario0\", \"Scenario1\", .. etc. use: \n",
@@ -488,6 +507,12 @@
     "elif success_rate_type == \"varying\":\n",
     "    succes_rates_bins = n_scenarios # @USER: Set this when using success_rate_type = \"varying\"\n",
     "    succes_rates = list(range(100//succes_rates_bins,100+1,100//succes_rates_bins))\n",
+    "    if include_0:\n",
+    "        if 0 not in succes_rates: succes_rates = [0] + succes_rates\n",
+    "    if include_100:\n",
+    "        if 100 not in succes_rates: succes_rates = succes_rates + [100]\n",
+    "    n_scenarios = len(succes_rates)\n",
+    "\n",
     "elif success_rate_type == \"custom\":\n",
     "    succes_rates_custom = [10,20,30,40,50] # @USER: Set this when using success_rate_type = \"custom\"\n",
     "    succes_rates = succes_rates_custom\n",
@@ -629,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +992,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,6 +1031,64 @@
     "pivotted_data.columns = range(1,len(pivotted_data.columns)+1)\n",
     "\n",
     "pivotted_data # Show pivotted data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten(xss):\n",
+    "    return [x for xs in xss for x in xs]\n",
+    "\n",
+    "age_range = list(range(start_age,stop_age+1))\n",
+    "gender = ['0', '1'] # 0: male, 1: female\n",
+    "categories = list(range(1, n_categories+1))\n",
+    "\n",
+    "length_of_frame = len(age_range)*len(gender)*(n_categories*n_categories)\n",
+    "\n",
+    "age_column = age_range*len(gender)*(n_categories*n_categories)\n",
+    "gender_column = sorted(gender*len(age_range)*(n_categories*n_categories))\n",
+    "categories_column = flatten([[category]*len(age_range)*n_categories for category in categories]*len(gender))\n",
+    "transition_category_column = flatten([[category]*len(age_range) for category in categories]*n_categories*len(gender))\n",
+    "\n",
+    "data = pd.DataFrame({'age': age_column, \n",
+    "                     'gender': gender_column, \n",
+    "                     'category': categories_column, \n",
+    "                     'transition_category': transition_category_column})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_matrix(start_age, stop_age, n_categories, transition_chances):\n",
+    "    # Create a transitionmatrix\n",
+    "\n",
+    "    age_range = list(range(start_age,stop_age+1))\n",
+    "    gender = ['0', '1'] # 0: male, 1: female\n",
+    "    categories = list(range(1, n_categories+1))\n",
+    "\n",
+    "    length_of_frame = len(age_range)*len(gender)*(n_categories*n_categories)\n",
+    "\n",
+    "    age_column = age_range*len(gender)*(n_categories*n_categories)\n",
+    "    gender_column = sorted(gender*len(age_range)*(n_categories*n_categories))\n",
+    "    categories_column = flatten([[category]*len(age_range)*n_categories for category in categories]*len(gender))\n",
+    "    transition_category_column = flatten([[category]*len(age_range) for category in categories]*n_categories*len(gender))\n",
+    "\n",
+    "    data = pd.DataFrame({'age': age_column, \n",
+    "                        'gender': gender_column, \n",
+    "                        'category': categories_column, \n",
+    "                        'transition_category': transition_category_column})\n",
+    "\n",
+    "    data['transition_chance'] = 0\n",
+    "    for transition in transition_chances:\n",
+    "        data.loc[((data.category==transition[0]) & (data.transition_category==transition[1])), 'transition_chance'] = transition[2]\n",
+    "\n",
+    "    return(data)"
    ]
   },
   {
